--- a/app/webroot/css/master.css
+++ b/app/webroot/css/master.css
@@ -10,16 +10,24 @@ html{
 body{
 	height: 100%;
 	width: 100%;	
-	margin: 0;
+	margin: 0px;
 	padding: 0;
+	background-image: -webkit-linear-gradient(#FFF, #F2F2F2);
+	
+	
 }
 
 #content-container{
-	background: #FFF;
-	border: #d1d1d1 8px solid;
+/*	background-image: linear-gradient(top, #555, #CC0000);*/
+/*	border: #d1d1d1 8px solid;*/
 	width: 950px;
 	margin: 0 auto;
 	padding: 10px;
+/*	height: 100%;*/
+}
+
+.cssgradients{
+    background-image: linear-gradient(#CC0000, #333);
 }
 
 h1{
@@ -29,7 +37,7 @@ h1{
 }
 
 div.roadmap{
-	border: #f2f2f2 1px solid;
+/*	border: #f2f2f2 1px solid;*/
 	width: 900px;
 	margin: 0 auto;
 	padding: 5px;
@@ -45,9 +53,18 @@ div.step label{
 
 div.roadmap div.milestone{
 	float: left;
-	border-right: #d1d1d1 1px solid;
+	border: #d1d1d1 1px solid;
 	padding: 3px;
-	height: 100$;
+	height: 100%;
+	background: #FFF;
+	margin: 5px;
+	-webkit-box-shadow: #575757 1px 1px 1px;
+    -moz-box-shadow: #575757 1px 1px 1px;
+    box-shadow: #575757 1px 1px 1px;
+/*	border: 1px solid #141414;*/
+		-webkit-border-radius: 0 0 12px 12px;
+		-moz-border-radius: 0 0 12px 12px;
+		border-radius: 0 0 0 12px;
 }
 
 div.roadmap div.milestone div.step{
