--- a/app/webroot/css/master.css
+++ b/app/webroot/css/master.css
@@ -24,6 +24,7 @@ body{
 	margin: 0 auto;
 	padding: 10px;
 /*	height: 100%;*/
+	position: relative;
 }
 
 .cssgradients{
@@ -31,6 +32,7 @@ body{
 }
 
 h1{
+	text-indent: 100px;
 	letter-spacing: -1px;
 	color: #CC0000;
 	border-bottom: #575757 1px solid;
@@ -287,4 +289,11 @@ a.magnify{
 	width: 26px;
 	height: 26px;
 	font-size: 0pt;
+}
+
+div.logo{
+	width: 100px;
+	height: 150px;
+	background: url(../img/logo.png) no-repeat;
+	position: absolute;
 }
