added a stupid beta tag.. i think im bored now

--- a/app/webroot/css/master.css
+++ b/app/webroot/css/master.css
@@ -297,3 +297,8 @@ div.logo{
 	background: url(../img/logo.png) no-repeat;
 	position: absolute;
 }
+
+img#beta-logo{
+	position: absolute;
+	right: 40px;
+}
