added in an empty placeholder for milestones and changed the scroll on milestone addition to scroll to the bottom of the doc

--- a/app/webroot/css/master.css
+++ b/app/webroot/css/master.css
@@ -301,3 +301,12 @@ img#beta-logo{
 	position: absolute;
 	right: 40px;
 }
+
+div.emptyMilestone{
+	color: #d1d1d1;
+	font-size: 1em;
+	text-align: center;
+	padding: 15px 0;
+/*	border: #000 1px solid;*/
+	margin-top: -15px;
+}
